@@ -1,3 +1,8 @@
+Tue Jan 21 00:44:03 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-save.c (escape_string_and_dup): correctly escape the
+	file we're saving.
+
 Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* Release 2.1.7
